# pptx-compressor

./: .gitignore  Cargo.toml  README.md  package.sh
.cargo/: config.toml
assets/: AppIcon.icns
src/: app.rs  lib.rs  main.rs
src/core/: extractor.rs  mod.rs  pipeline.rs  scanner.rs
src/handlers/: gif_handler.rs  image.rs  mod.rs  video.rs  xml_clean.rs
src/ui/: file_panel.rs  media_list.rs  mod.rs  progress.rs  settings.rs
src/utils/: content_types.rs  ffmpeg.rs  mod.rs
