[package]
name = "pptx-compressor"
version = "0.1.1"
edition = "2021"
description = "A GUI tool to compress PPTX file size by recompressing embedded images, videos and GIFs"

[dependencies]
# GUI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
rfd = "0.15"

# PPTX / ZIP / XML
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"

# Image processing
image = "0.25"

# GIF
gif = "0.13"

# Utilities
tempfile = "3"
walkdir = "2"
bytesize = "1"
rayon = "1"
dirs = "5"
which = "7"

# Windows specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
